chore: add SC, SL incubator modules